--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -43,9 +43,10 @@
         Nutrition Plans
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="">
-        <a href="" class="dropdown-item">Nutrition Plan 1</a>
-        <a href="" class="dropdown-item">Nutrition Plan 2</a>
-        <a href="" class="dropdown-item">Nutrition Plan 3</a>
+        <a href="" class="dropdown-item">Weight Loss Plan</a>
+        <a href="" class="dropdown-item">Muscle Building Plan</a>
+        <a href="" class="dropdown-item">General Fitness Plan</a>
+        <a href="" class="dropdown-item">Endurance Training Plan</a>
       </div>
     </li>
 
