--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,6 +31,20 @@
       </div>
     </li>
 
+     <li class="nav-item">
+      <a
+        class="logo-font font-weight-bold nav-link text-black"
+        href="#"
+        id=""
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Exercise Plans
+      </a>
+    </li>
+
+
     <li class="nav-item dropdown">
       <a
         class="logo-font font-weight-bold nav-link text-black mr-5"
