--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -42,6 +42,10 @@
       >
         Exercise Plans
       </a>
+      <div class="dropdown-menu border-0" aria-labelledby="">
+        <a href="{% url 'exercise_plans' %}?category=exercise" class="dropdown-item">Exercises</a>
+        <a href="{% url 'exercise_plans' %}?category=fitness_plan" class="dropdown-item">Fitness Plan</a>
+      </div>
     </li>
 
 
