--- a/exercise_plans/templates/exercise/exercise_plans.html
+++ b/exercise_plans/templates/exercise/exercise_plans.html
@@ -1,9 +1,68 @@
 <!-- exercise_plan_template.html -->
-{% for exercise in exercise %}
-    <h2>{{ plan.goal }}</h2>
-    {% for exercise in plan.exercises.all %}
-        <h3>{{ exercise.name }}</h3>
-        <p>{{ exercise.duration }}</p>
-        <p>{{ exercise.intensity }}</p>
-    {% endfor %}
-{% endfor %}
+
+{% extends "base.html" %}
+{% load static %}
+
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
+
+
+{% block content %}
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="logo-font">Exercise Plans</h2>
+            <hr class="w-50 mb-1">
+        </div>
+    </div>
+    <div class="row">
+        <div class="meal-container col-10 offset-1">
+            <div class="row mt-1 mb-2"></div>
+            <div class="row">
+                {% for exercise in exercises %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+
+                <h3>{{ day.day_name }}</h3>
+                <ul>
+                <li>
+                {{ exercise.name }} -
+                Duration: {{ exercise.duration }},
+                Intensity: {{ exercise.intensity }}
+                </li>
+
+                 </ul>
+                  </div>
+                </div>
+                {% if forloop.counter|divisibleby:1 %}
+                <div class="col-12 d-sm-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:2 %}
+                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:3 %}
+                <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:4 %}
+                <div class="col-12 d-none d-xl-block mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
