--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,7 @@
 <h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
 <p>{{ post.content }}</p>
 <p>Published on: {{ post.pub_date }}</p>
+<p>{{ post.author }}</p>
 <hr>
 {% endfor %}
 {% endblock %}
