--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -74,7 +74,7 @@
     <li class="nav-item">
       <a
         class="logo-font font-weight-bold nav-link text-black"
-        href="#"
+        href="{% url 'post_list' %}"
         id=""
         data-toggle="dropdown"
         aria-haspopup="true"
