--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,23 @@
+
 <!-- blog/templates/blog/post_list.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Blog</h2>
-{% for post in posts %}
-<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
-<p>{{ post.content }}</p>
-<p>Published on: {{ post.pub_date }}</p>
-<p>{{ post.author }}</p>
-<hr>
-{% endfor %}
+<div class="container mt-5">
+    <h2 class="mb-4">Blog</h2>
+    <div class="row">
+        {% for post in posts %}
+        <div class="col-md-6 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
+                    <p class="card-text">{{ post.author }}</p>
+                     <p class="card-text">{{ post.content }}</p>
+                    <p class="card-text"><small class="text-muted">Published on: {{ post.pub_date }}</small></p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
