--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -57,31 +57,15 @@
         <a href="{% url 'meals' %}?category=endurance_training_plan" class="dropdown-item">Endurance Training Plan</a>
       </div>
     </li>
+     <li class="nav-item">
+         <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'post_list' %}">Blog</a>
+     </li>
 
     <li class="nav-item">
-      <a
-        class="logo-font font-weight-bold nav-link text-black"
-        href="#"
-        id=""
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        Fitness Advice
+      <a class="logo-font font-weight-bold nav-link text-black"
+        href="#" >
+       Join Community
       </a>
-    </li>
-
-    <li class="nav-item">
-      <a
-        class="logo-font font-weight-bold nav-link text-black"
-        href="{% url 'post_list' %}"
-        id=""
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-      Blog
-      </a>
-    </li>
+      </li>
   </ul>
 </div>
