--- a/join_community/templates/join_community/signup.html
+++ b/join_community/templates/join_community/signup.html
@@ -1,52 +1,16 @@
-
+<!-- join_community/templates/join_community/signup.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-<h2> Join Community </h2>
-<form method="post" action="{% url 'join_community:signup' %}">
-    {% csrf_token %}
-  <div class="container">
-      <form action="#">
-          <div class="form-row">
-              <div class="input-data">
-                  <input type="text" required>
-                  <div class="underline"></div>
-                  <label for="">First Name</label>
-              </div>
-              <div class="input-data">
-                  <input type="text" required>
-                  <div class="underline"></div>
-                  <label for="">Last Name</label>
-              </div>
-          </div>
-          <div class="form-row">
-              <div class="input-data">
-                  <input type="text" required>
-                  <div class="underline"></div>
-                  <label for="">Email Address</label>
-              </div>
-              <div class="input-data">
-                  <input type="text" required>
-                  <div class="underline"></div>
-                  <label for="">Website Name</label>
-              </div>
-          </div>
-          <div class="form-row">
-              <div class="input-data textarea">
-                  <textarea rows="8" cols="80" required></textarea>
-                  <br />
-                  <div class="underline"></div>
-                  <label for="">Write your message</label>
-                  <br />
-                  <div class="form-row submit-btn">
-                      <div class="input-data">
-                          <div class="inner"></div>
-                          <input type="submit" value="submit">
-                      </div>
-                  </div>
-      </form>
-  </div>
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-</form>
+<div class="container mt-5">
+    <h2>Sign Up</h2>
+    <form method="post" action="{% url 'join_community:signup' %}" class="mb-3">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
+</div>
 {% endblock %}
+
+
+
