--- a/join_community/templates/join_community/success.html
+++ b/join_community/templates/join_community/success.html
@@ -2,6 +2,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Success</h2>
-<p>You have successfully subscribed!</p>
+<div class="container mt-5">
+    <h2>Success</h2>
+    <p class="alert alert-success">You have successfully subscribed!</p>
+</div>
 {% endblock %}
+
