--- a/exercise_plans/templates/exercise/exercise_plans.html
+++ b/exercise_plans/templates/exercise/exercise_plans.html
@@ -25,20 +25,20 @@
         <div class="exercise-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
             <div class="row">
-                {% for exercise in exercise %}
+                {% for exercise in exercises %}
                   <div class="col-md-6 mb-4">
                       <div class="card">
                           <div class="card-body">
                               {% if exercise.image %}
-                              <a href="{% url 'exercise' exercise.id %}">
+                              <a href="{% url 'exercise_plans_detail' pk=exercise.pk %}">
                                   <img class="card-img-top img-fluid" src="{{ exercise.image.url }}"
                                       alt="{{ exercise.name }}">
                               </a>
-                              {% else %}
-                              <a href="{% url 'exercise' exercise.id %}">
+                              <!-- {% else %}
+                               <a href="{% url 'exercise_plans_detail' pk=exercise.pk %}">
                                   <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
                                       alt="{{ exercise.name }}">
-                              </a>
+                              </a> -->
                               {% endif %}
                        <div class="card-body pb-0">
                         <h3 class="card-title">
