--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,28 +1,8 @@
-html {
-    height: 100%;
-}
-
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
-     background-size: cover;
+    font-family: "Gill Sans Extrabold", sans-serif;
     color: #555;
-    font-family: 'Lato';
-    position: relative;
-        min-height: 100vh;
-        }
-      
-
-
-
-
-/* from Bulma */
-.icon {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-    height: 1.5rem;
-    width: 1.5rem;
 }
+      
 
 .logo-font {
     text-transform: uppercase;
