--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,8 +2,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>{{ post.title }}</h2>
-<p>{{ post.content }}</p>
-<p>Published on: {{ post.pub_date }}</p>
-<p> By: {{ post.author}}</p>
+<div class="container mt-5">
+  <h2>{{ post.title }}</h2>
+   </div>
+   <div class="container mt-5">
+  <p>{{ post.content }}</p>
+  </div>
+   <div class="container mt-5">
+  <p>Published on: {{ post.pub_date }}</p>
+  </div>
+  <div class="container mt-5">
+  <p> By: {{ post.author}}</p>
+  </div>
+
 {% endblock %}
