--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,23 @@
-body {
-    font-family: "Gill Sans Extrabold", sans-serif;
-    color: #555;
+html {
+    height: 100%;
 }
-      
+
+body {
+    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: calc(100vh - 164px);
+    color: #555;
+    font-family: 'Lato';
+}
+
+/* from Bulma */
+.icon {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    height: 1.5rem;
+    width: 1.5rem;
+}
 
 .logo-font {
     text-transform: uppercase;
@@ -59,15 +74,6 @@ body {
     background: #000 !important;
 }
 
-.overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
-}
 
 a.category-badge>span.badge:hover {
     background: #212529 !important;
@@ -190,6 +196,7 @@ a.category-badge>span.badge:hover {
         height: calc(100vh - 116px);
     }
 }
+
 
 footer {
     background-color: #525252;
