--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,16 +2,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container">
   <h2>{{ post.title }}</h2>
    </div>
-   <div class="container mt-5">
+   <div class="container ">
   <p>{{ post.content }}</p>
   </div>
-   <div class="container mt-5">
+   <div class="container">
   <p>Published on: {{ post.pub_date }}</p>
   </div>
-  <div class="container mt-5">
+  <div class="container">
   <p> By: {{ post.author}}</p>
   </div>
 
