--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,10 @@
-
 <!-- blog/templates/blog/post_list.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container ">
+<div class="container">
+<div class="overlay">
+   <div class="container-fluid">
     <h2>Blog</h2>
     <div class="row">
         {% for post in posts %}
@@ -12,12 +13,13 @@
                 <div class="card-body">
                     <h3 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
                     <p class="card-text">{{ post.author }}</p>
-                     <p class="card-text">{{ post.content }}</p>
+                    <p class="card-text">{{ post.content }}</p>
                     <p class="card-text"><small class="text-muted">Published on: {{ post.pub_date }}</small></p>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
+   </div>
 </div>
 {% endblock %}
