--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,13 +2,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-<div class="overlay">
+
+<div class="overlay ">
    <div class="container-fluid">
     <h2>Blog</h2>
     <div class="row">
         {% for post in posts %}
-        <div class="col-md-6 mb-4">
+        <div class="col-md-6 mb-4 blog-container">
             <div class="card">
                 <div class="card-body">
                     <h3 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
@@ -20,6 +20,6 @@
         </div>
         {% endfor %}
     </div>
-   </div>
+  </div>
 </div>
 {% endblock %}
