--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,9 @@ html {
 }
 
 body {
-   
+    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
+    height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
 }
@@ -73,6 +74,15 @@ body {
     background: #000 !important;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
 
 a.category-badge>span.badge:hover {
     background: #212529 !important;
@@ -161,6 +171,41 @@ a.category-badge>span.badge:hover {
     overflow-y: auto;
 }
 
+/* -------------------------------- Media Queries */
+
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+    .container {
+        max-width: 80%;
+    }
+}
+
+/* fixed top navbar only on medium and up */
+@media (min-width: 992px) {
+    .fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+
+    .header-container {
+        padding-top: 164px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+}
+
 
 .contact-header{
     position:relative;
@@ -172,6 +217,15 @@ a.category-badge>span.badge:hover {
     position: relative;
      top: 170px;
      left:30px;
+}
+
+.blog-container{
+    position: relative !important;
+    top: 70%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height:50%;
 }
 
 /*footer {
